# data2sound

./: Cargo.toml
design docs/: srs.md
src/: domain.rs  infrastructure.rs  lib.rs  main.rs
src/domain/: pure_tone.rs  text2track.rs  text_analyzer.rs
src/infrastructure/: export_wav.rs
