[package]
name = "data2sound"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dasp = { version = "0.11", features = ["all"] }
hound = "3.5.1"
rand = "0.8.5"
rodio = "0.19.0"
rstest = "0.23.0"
rustfft = "6.2.0"
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
